# fast-builder

./: .gitignore  .travis.yml  fast-builder.cabal  readme.md
.github/workflows/: haskell-ci.yml
Data/ByteString/: FastBuilder.hs
Data/ByteString/FastBuilder/: Base.hs  Internal.hs  Prim.hs  Unsafe.hs
Data/ByteString/FastBuilder/Internal/: Prim.hs
benchmarks/: aeson.hs  map.hs  test.hs  vector.hs
benchmarks/Aeson/: Bstr.hs  Fast.hs  template.hs
benchmarks/aeson/: HashMapExts.hs  HashMapNames.hs  main.hs  template.hs
tests/: prop.hs
