name:                fast-builder
version:             0.0.0.2
synopsis:            Fast ByteString Builder
description:         An efficient implementation of ByteString builder. It should be faster than
                     the standard implementation in most cases.
                     .
                     In many benchmarks, the performance improvement is 2x-10x.
homepage:            http://github.com/takano-akio/fast-builder
license:             PublicDomain
license-file:        LICENSE
author:              Takano Akio
maintainer:          aljee@hyper.cx
-- copyright:           
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.ByteString.FastBuilder,
                       Data.ByteString.FastBuilder.Internal
  other-modules:       Data.ByteString.FastBuilder.Internal.Prim

  -- other-extensions:    
  build-depends:       base >= 4.8 && < 4.9, bytestring >= 0.10.6.0, ghc-prim
  -- hs-source-dirs:      
  default-language:    Haskell2010
  ghc-options:         -Wall -g

benchmark aeson
  type:                exitcode-stdio-1.0
  main-is:             main.hs
  hs-source-dirs:      benchmarks/aeson
  other-modules:       Fast, Bstr, HashMapExts, HashMapNames
  build-depends:       base, fast-builder, aeson, criterion, bytestring, scientific, text, vector, deepseq, unordered-containers, ghc-prim, true-name, template-haskell
  ghc-options:         -fsimpl-tick-factor=120
  ghc-options:         -Wall -threaded -g -rtsopts

benchmark vector
  type:                exitcode-stdio-1.0
  main-is:             vector.hs
  hs-source-dirs:      benchmarks
  build-depends:       base, fast-builder, criterion, bytestring, vector, deepseq
  ghc-options:         -Wall -threaded -g -rtsopts -eventlog

benchmark map
  type:                exitcode-stdio-1.0
  main-is:             map.hs
  hs-source-dirs:      benchmarks
  build-depends:       base, fast-builder, criterion, bytestring, containers, deepseq
  ghc-options:         -Wall -threaded -g -rtsopts -eventlog

test-suite prop
  type:                exitcode-stdio-1.0
  main-is:             prop.hs
  hs-source-dirs:      tests
  build-depends:       base, fast-builder, bytestring, QuickCheck, stm, process
  ghc-options:         -Wall -g -rtsopts

source-repository head
  type:                git
  location:            https://github.com/takano-akio/fast-builder.git
